--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-scripts": "4.0.3",
+		"tailwind-hamburgers": "^1.0.2",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat",
 		"web-vitals": "^1.0.1"
 	},
