react-router-dom added and configured. Some small fixes. Creation of the products component (still need to style it)

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,10 @@
 /build
 img
 logos
-portraits
-products
-fonts
+/public/assets/img
+/src/assets/portraits
+/src/assets/products
+/src/assets/fonts
 
 # misc
 .DS_Store
