--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,14 @@
 # production
 /build
 img
-logos
+/public/assets/logos
+/public/assets/portraits
+/public/assets/products
 /public/assets/img
 /src/assets/portraits
 /src/assets/products
-/src/assets/fonts
+/src/assets/logos
+/src/assets/img
 
 # misc
 .DS_Store
