--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"autoprefixer": "9",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
 		"mongoose": "^5.12.1",
 		"postcss": "7",
 		"react": "^17.0.1",
