--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"mongoose": "^5.12.1",
+		"nodemailer": "^6.5.0",
 		"postcss": "7",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
