--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"handlebars": "^4.7.7",
 		"mongoose": "^5.12.1",
 		"nodemailer": "^6.5.0",
+		"path": "^0.12.7",
 		"postcss": "7",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
